--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
 			<li>Playing Facebook games <br>(<a href="https://www.facebook.com/EverWingGame/">EverWing </a> currently has me addicted)</li>
 		</ul>
 	</div>
+	<div id=Resume>
+		<h2>Education</h2>
+		<ul>
+			<li>2015-Present: Georgia State University</li>
+			<li>2014-2015: Clayton State University</li>
+			<li>2011-2015: Forest Park High School</li>
+			<h2> Job History </h2>
+			<ol>
+				<li>Summer 2017-Present: Intern at Southern Experience</li>
+				<li>Oct 2014-Present: Wellness Coach at Salud Y Bienestar</li>
+				<li>July 2016-Oct 2016: Ticketing Events Team member at Turner Field</li>
+			</ol>
+		</ul>
+	</div>
 	<div id="menu">
 	<h2>Other Helpful links: </h2>
 		<table>
@@ -59,22 +73,57 @@
 				<td>Assignment 1</td>
 				<td>This Homepage <a href="#"> (back to top)</a></td>
 			</tr>
+			<tr>
+				<td>Assignment 2</td>
+				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment2/program1.html"> Link here</a></td>
+			</tr>
+			<tr>
+				<td>Assignment 3</td>
+				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment3/MyLunch.php"> Part 1: Did Charlie eat your lunch?</a> <br><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment3/checkerboard.php"> Part 2: Checkerboard</a> <br> <a href="http://codd.cs.gsu.edu/~jibarra1/Assignment3/ArrayAndFunctions.php"> Part 3: Arrays and functions</a> </td>
+			</tr>
+			<tr>
+				<td>Assignment 4</td>
+				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment4/style_text.html">Style Your Text</a></td>
+			</tr>
+			<tr>
+				<td>Assignment 5</td>
+				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment5(inClass)/InClass3-Assignment5.html">Quiz 3/Assignment 5 - Inclass</a></td>
+			</tr>
+			<tr>
+				<td>Assignment 6</td>
+				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment6/PartA.html">Part A - links to B and C</a></td>
+			</tr>
+			<tr>
+				<td>Assignment 7</td>
+				<td>TBD</td>
+			</tr>
+			<tr>
+				<td>Assignment 8</td>
+				<td>TBD</td>
+			</tr>
+			<tr>
+				<td>Project 1: HTML and CSS</td>
+				<td><a href="http://codd.cs.gsu.edu/~hpatel83/BlackJack/">Play Blackjack!</a></td>
+			</tr>
+			<tr>
+				<td>Project 2: PHP</td>
+				<td><a href="http://codd.cs.gsu.edu/~odurojaiye1/homepage.html
+">Personality Quiz</a></td>
+			</tr>
+			<tr>
+				<td>Project 3: JAVASCRIPT</td>
+				<td>TBD</td>
+			</tr>
+			<tr>
+				<td>Project 4: FINAL</td>
+				<td>TBD</td>
+			</tr>
+			<tr>
+				<td>Extra JS Practice Work: Posted 10/19 </td>
+				<td>TBD</td>
+			</tr>
 
 		</table>
-	</div>
-	<div id=nList>
-		<h2>Education</h2>
-		<ul>
-			<li>2015-Present: Georgia State University</li>
-			<li>2014-2015: Clayton State University</li>
-			<li>2011-2015: Forest Park High School</li>
-			<h2> Job History </h2>
-			<ol>
-				<li>Summer 2017-Present: Intern at Southern Experience</li>
-				<li>Oct 2014-Present: Wellness Coach at Salud Y Bienestar</li>
-				<li>July 2016-Oct 2016: Ticketing Events Team member at Turner Field</li>
-			</ol>
-		</ul>
 	</div>
 
 	<div id="footer">
