update page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Jo's Homepage</title>
+<title>Joana's HCI Web Course Page</title>
 <link rel="stylesheet" type="text/css" href="A1_StylesCSS.css">
 </head>
 
