upadte top header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="container">
 
 	<div id="header">
-		<h1> All about Jo </h1>
+		<h1> HCI Web Course Page </h1>
 		<h3>a webpage by Joana Ibarra</h3>
 	</div>
 	<div id="my-pic" class="div1">
