--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img class="displayed" src="myPic.jpg" alt="An epic picture of a programmer on GSU campus" />
 		</p>
 		<p>
-			Hello World! My name is Joana but my friends call me Jo. I am a Junior Computer Science major at Georgia State University (#StateNotSouthern). I have experience with Java, Groovy, JavaScript, C, C#, Assembly, and even a little bit of CoffeeScript. This past summer I interned with a company called Southern Experience and got plenty of hands-on work done!
+			Hello World! My name is Joana but my friends call me Jo. I am a Senior Computer Science major at Georgia State University (#StateNotSouthern). I have experience with Java, Groovy, JavaScript, C, C#, Assembly, and even a little bit of CoffeeScript. I've had the amazing opportunity to intern with Southern Experience for about a year now. Below are the best ways to get in contact with me: 
 		</p>
 		<p>
 			Outside of coding, I LOVE to workout. I am a wellness coach back at home and hold free fit camps for my community! We are a team of people helping everyone become healthier! Checkout my website <a href="jibarra.goherbalife.com">here</a>. What a better way to say I love myself than beginning a heathy active lifestyle!
