--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 			<img class="displayed" src="myPic.jpg" alt="An epic picture of a programmer on GSU campus" />
 		</p>
 		<p>
-			Hello World! My name is Joana but my friends call me Jo. I am a Senior Computer Science major at Georgia State University (#StateNotSouthern). I have experience with Java, Groovy, JavaScript, C, C#, Assembly, and even a little bit of CoffeeScript. I've had the amazing opportunity to intern with Southern Experience for about a year now. Below are the best ways to get in contact with me: 
+			Hello World! My name is Joana but my friends call me Jo. I am a Senior Computer Science major at Georgia State University (#StateNotSouthern). I have experience with Java, Groovy, JavaScript, C, C#, Assembly, and even a little bit of CoffeeScript. I've had the amazing opportunity to intern with Southern Experience for about a year now. Outside of coding, I LOVE to workout. I co-own a nutrition shop only 20mins away from campus where I host $7 workout classes for my community! We are a team of people helping everyone become healthier! Below are the best ways to get in contact with me: 
 		</p>
 		<p>
-			Outside of coding, I LOVE to workout. I am a wellness coach back at home and hold free fit camps for my community! We are a team of people helping everyone become healthier! Checkout my website <a href="jibarra.goherbalife.com">here</a>. What a better way to say I love myself than beginning a heathy active lifestyle!
+			 
+			 Checkout my website <a href="jibarra.goherbalife.com">here</a>
 		</p>
 	</div>
 	<div id="hobbies"> 
