center contact info

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		<p>
 			Hello World! My name is Joana but my friends call me Jo. I am a Senior Computer Science major at Georgia State University (#StateNotSouthern). I have experience with Java, Groovy, JavaScript, C, C#, Assembly, and even a little bit of CoffeeScript. I've had the amazing opportunity to intern with Southern Experience for about a year now. Outside of coding, I LOVE to workout. I co-own a nutrition shop only 20mins away from campus where I host $7 workout classes for my community! We are a team of people helping everyone become healthier! Below are the best ways to get in contact with me: 
 		</p>
-		<p>
-			 Panthermail: jibarra1@student.gsu.edu
-			 Gmail: joana97.ji@gmail.com 
-			 Coaching website <a href="jibarra.goherbalife.com">jibarra.goherbalife.com</a>
+		<p align="center">
+			 Panthermail: jibarra1@student.gsu.edu <br>
+			 Gmail: joana97.ji@gmail.com <br>
+			 Coaching website <a href="jibarra.goherbalife.com">jibarra.goherbalife.com</a><br>
 			 IG: @jo_mpowers
 		</p>
 	</div>
