update hobbies block to show course info

--- a/index.html
+++ b/index.html
@@ -22,20 +22,17 @@
 		<p align="center">
 			 Panthermail: jibarra1@student.gsu.edu <br>
 			 Gmail: joana97.ji@gmail.com <br>
-			 Coaching website <a href="jibarra.goherbalife.com">jibarra.goherbalife.com</a><br>
+			 Coaching website: <a href="https://jibarra.goherbalife.com/Catalog/Home/Index/en-US">jibarra.goherbalife.com</a><br>
 			 IG: @jo_mpowers
 		</p>
 	</div>
 	<div id="hobbies"> 
-		<h2>Other Hobbies:</h2>
+		<h2>About this course:</h2>
 		<ul>
-			<li>Cooking</li>
-			<li>Reading</li>
-			<li><a href="https://en.wikipedia.org/wiki/Yin_yoga">Yin Yoga</a></li>
-			<li>Netflix Binging Marvel Shows</li>
-			<li>Listening to Personal Development Podcasts</li>
-			<li>Posting and scrolling through social media</li>
-			<li>Playing Facebook games <br>(<a href="https://www.facebook.com/EverWingGame/">EverWing </a> currently has me addicted)</li>
+			<li>Course Name: Human-Computer Interaction</li>
+			<li>Course Number: CSc 4720</li>
+			<li>Semester: Spring 2019</li>
+			<li>Instructor: <a href="https://shared.cas.gsu.edu/profile/carol-bales/">Carol Bales</a></li>
 		</ul>
 	</div>
 	<div id=Resume>
