Create link for my instagram handle

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			 Panthermail: jibarra1@student.gsu.edu <br>
 			 Gmail: joana97.ji@gmail.com <br>
 			 Coaching website: <a href="https://jibarra.goherbalife.com/Catalog/Home/Index/en-US">jibarra.goherbalife.com</a><br>
-			 IG: @jo_mpowers
+			 IG: <a href="https://www.instagram.com/jo_mpowers/">@jo_mpowers</a>
 		</p>
 	</div>
 	<div id="hobbies"> 
