update menu table to be an HCI assignment placeholder

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 		</ul>
 	</div>
 	<div id="menu">
-	<h2>Other Helpful links: </h2>
+	<h2>Assignments: </h2>
+	<h3>Note: links will be added throughout the semester as assignments are completed.</h3>
 		<table>
 			<tr>
-				<th>Important stuff</th>
+				<th>Title</th>
 				<th>Link</th>
 			</tr>
 			<tr>
