--- a/index.html
+++ b/index.html
@@ -36,80 +36,44 @@
 		</ul>
 	</div>
 	<div id="menu">
-	<h2>Assignments: </h2>
-	<h4>Note: links will be added throughout the semester as assignments are completed.</h4>
+	<h2>Class Activities: </h2>
 		<table>
 			<tr>
 				<th>Title</th>
 				<th>Link</th>
 			</tr>
 			<tr>
-				<td>Computer Science Department Hompage</td>
-				<td><a href="http://www.cs.gsu.edu/">http://www.cs.gsu.edu/</a></td>
+				<td>Research Problem to Solve</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>Assignments and Projects</td>
-				<td><a href="https://grid.cs.gsu.edu/~lhenry/?q=node/94">https://grid.cs.gsu.edu/~lhenry/?q=node/94</a></td>
+				<td>User and Problem Research</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>In class Exercise 1</td>
-				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Inclass1/Page1.html
-">Journal entry exercise</a></td>
+				<td>Interaction Design and Skit</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>Assignment 1</td>
-				<td>This Homepage <a href="#"> (back to top)</a></td>
+				<td>UI Design Team Assesment</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>Assignment 2</td>
-				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment2/program1.html"> Link here</a></td>
+				<td>Interactive Prototype and Article</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>Assignment 3</td>
-				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment3/MyLunch.php"> Part 1: Did Charlie eat your lunch?</a> <br><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment3/checkerboard.php"> Part 2: Checkerboard</a> <br> <a href="http://codd.cs.gsu.edu/~jibarra1/Assignment3/ArrayAndFunctions.php"> Part 3: Arrays and functions</a> </td>
+				<td>Guerilla Usability Test Findings</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>Assignment 4</td>
-				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment4/style_text.html">Style Your Text</a></td>
+				<td>Final Presentation</td>
+				<td>Not yet available</td>
 			</tr>
 			<tr>
-				<td>Assignment 5</td>
-				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment5(inClass)/InClass3-Assignment5.html">Quiz 3/Assignment 5 - Inclass</a></td>
+				<td>Demo Day Pics!</td>
+				<td>Not yet available</td>
 			</tr>
-			<tr>
-				<td>Assignment 6</td>
-				<td><a href="http://codd.cs.gsu.edu/~jibarra1/Assignment6/PartA.html">Part A - links to B and C</a></td>
-			</tr>
-			<tr>
-				<td>Assignment 7</td>
-				<td>TBD</td>
-			</tr>
-			<tr>
-				<td>Assignment 8</td>
-				<td>TBD</td>
-			</tr>
-			<tr>
-				<td>Project 1: HTML and CSS</td>
-				<td><a href="http://codd.cs.gsu.edu/~hpatel83/BlackJack/">Play Blackjack!</a></td>
-			</tr>
-			<tr>
-				<td>Project 2: PHP</td>
-				<td><a href="http://codd.cs.gsu.edu/~odurojaiye1/homepage.html
-">Personality Quiz</a></td>
-			</tr>
-			<tr>
-				<td>Project 3: JAVASCRIPT</td>
-				<td>TBD</td>
-			</tr>
-			<tr>
-				<td>Project 4: FINAL</td>
-				<td>TBD</td>
-			</tr>
-			<tr>
-				<td>Extra JS Practice Work: Posted 10/19 </td>
-				<td>TBD</td>
-			</tr>
-
 		</table>
 	</div>
 
