update bio to include information about the class`

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 			 Coaching website: <a href="https://jibarra.goherbalife.com/Catalog/Home/Index/en-US">jibarra.goherbalife.com</a><br>
 			 IG: <a href="https://www.instagram.com/jo_mpowers/">@jo_mpowers</a>
 		</p>
+		<p>
+			Human-Computer Interaction interests me because I want to be able to be the developer behind an amazing, easy, and fun experiecne. I am aiming to learn how to create and design easy-to-use software that is also appealing to the eye! Outside of the languages mentioned above, other skills I have include presentation skills, leadership, and creativity!
+		</p>
 	</div>
 	<div id="hobbies"> 
 		<h2>About this course:</h2>
