add file to webpage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</tr>
 			<tr>
 				<td>Interaction Design and Skit</td>
-				<td>Not yet available</td>
+				<td><a href="file:///Users/joanaibarra/Downloads/helpinghands/helpinghands.html">Assignment 4 Final</a></td>
 			</tr>
 			<tr>
 				<td>UI Design Team Assesment</td>
