--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</tr>
 			<tr>
 				<td>Interaction Design and Skit</td>
-				<td><a href="https://docs.google.com/document/d/1NP8z3xyRkwPgQRJpqAac9dPhqBycFV7ePLCuzMuJEmo/edit">Assignment 4 Draft, </a>  <a href="https://docs.google.com/document/d/1jK5-Ieb6hgWttwS_tYObc0E3iXX0ubx35FPf2L6UR8s/edit">Assignment 4 Final</a></td>
+				<td><a href="https://docs.google.com/document/d/1NP8z3xyRkwPgQRJpqAac9dPhqBycFV7ePLCuzMuJEmo/edit">Assignment 4 Draft, </a> <br> <a href="https://docs.google.com/document/d/1jK5-Ieb6hgWttwS_tYObc0E3iXX0ubx35FPf2L6UR8s/edit">Assignment 4 Final</a></td>
 			</tr>
 			<tr>
 				<td>UI Design Team Assesment</td>
