update prior rows on the table

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 			</tr>
 			<tr>
 				<td>Research Problem to Solve</td>
-				<td>Not yet available</td>
+				<td>My Research Paper</td>
 			</tr>
 			<tr>
 				<td>User and Problem Research</td>
-				<td>Not yet available</td>
+				<td><a href="https://docs.google.com/document/d/1NP8z3xyRkwPgQRJpqAac9dPhqBycFV7ePLCuzMuJEmo/edit">Group Work: Brainstorming, Personas and Flow Chart Drafts</a> </td>
 			</tr>
 			<tr>
 				<td>Interaction Design and Skit</td>
