add my research paper to the site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</tr>
 			<tr>
 				<td>Research Problem to Solve</td>
-				<td>My Research Paper</td>
+				<td><a href="https://docs.google.com/document/d/1bUJq3adcjknv0N1rR3BqUUs-XTn1CgwUCZSu0tlbsXI/edit?usp=sharing">My Research Paper</a></td>
 			</tr>
 			<tr>
 				<td>User and Problem Research</td>
