update to sharable link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</tr>
 			<tr>
 				<td>User and Problem Research</td>
-				<td><a href="https://docs.google.com/document/d/1NP8z3xyRkwPgQRJpqAac9dPhqBycFV7ePLCuzMuJEmo/edit">Group Work: Brainstorming, Personas and Flow Chart Drafts</a> </td>
+				<td><a href="https://docs.google.com/document/d/1NP8z3xyRkwPgQRJpqAac9dPhqBycFV7ePLCuzMuJEmo/edit?usp=sharing">Group Work: Brainstorming, Personas and Flow Chart Drafts</a> </td>
 			</tr>
 			<tr>
 				<td>Interaction Design and Skit</td>
